--- a/pages/games.html
+++ b/pages/games.html
@@ -66,13 +66,13 @@
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
+              <a href="../pageposts/games.post2.html">
                 <img src="../imagens/posts/fortnite.png" alt="Fortnite">
               </a>
             </div>
             <div class="texto">
               <p class="texto-p-header">Recurso estará disponível em todos os modos e plataformas</p>
-                <a href="#">
+                <a href="../pageposts/games.post2.html">
                   <h2>Nova atualização de Fortnite deixará jogadores abrirem paraquedas durante partidas</h2>
                 </a>
               <p class="texto-p-main">
@@ -87,13 +87,13 @@
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
+              <a href="../pageposts/games.post3.html">
                 <img src="../imagens/posts/bungie.png" alt="Destiny">
               </a>
             </div>
             <div class="texto">
               <p class="texto-p-header">Jogo seria mais focado em elementos RPG</p>
-                <a href="#">
+                <a href="../pageposts/games.post3.html">
                   <h2>Bungie já está desenvolvendo Destiny 3 [Rumor]</h2>
                 </a>
               <p class="texto-p-main">
@@ -108,21 +108,21 @@
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/site-gears.jpg" alt="Rod Fergusson">
+              <a href="../pageposts/games.post4.html">
+                <img src="../imagens/posts/spyro.png" alt="Spyro">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">Novos jogos da franquia! </p>
-                <a href="#">
-                  <h2>Próximos jogos de Gears of War marcam uma nova fase do estúdio, diz Rod Fergusson</h2>
+              <p class="texto-p-header">Remake da franquia</p>
+                <a href="../pageposts/games.post4.html">
+                  <h2>Dragão roxo está de volta! Spyro Reignited Trilogy já está disponível</h2>
                 </a>
               <p class="texto-p-main">
-                Na BGS 2018, tivemos a excelente oportunidade de conversar com
-                 Rod Fergusson, chefe do estúdio The Coalition e produtor da franquia Gears of War!
+                Depois de ser adiado em dois meses, o dragãozinho roxo finalmente está de volta!
+                 Spyro Reignited Trilogy acaba de ser lançado e já está disponível no mundo inteiro.
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM XBOX
+                ONTEM - EM REMAKES
               </p>
             </div>
           </div>
