--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -34,7 +34,7 @@
             <i class="arrow right"></i>
           </a>
           <!-- O ÚLTIMO (a) NÃO PRECISA DE (i - seta) -->
-          <a href="hardware.html">HARDWARE</a>
+          <a href="./pages/hardware.html">HARDWARE</a>
         </div>
       </div>
     </header>
@@ -44,64 +44,80 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+              <a href="../pageposts/hardware.post.html">
+                <img src="../imagens/posts/fones1.jpg" alt="Caixa de Som">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">SOLTA O SOM!</p>
-                <a href="#">
-                  <h2>Veja dicas para bateria da caixinha da JBL durar mais</h2>
+              <p class="texto-p-header">solta o som!</p>
+                <a href="../pageposts/hardware.post.html">
+                  <h2>Dazz revela quatro novos modelos de headsets para jogos</h2>
                 </a>
               <p class="texto-p-main">
-                Orientações também indicam métodos para o carregamento
-                ser mais rápido e eficiente
+                Todos os headsets são flexíveis e ajustáveis.
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM CAIXAS DE SOM
+                ONTEM - FONES
               </p>
             </div>
           </div>
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
+              <a href="../pageposts/hardware.post2.html">
+                <img src="../imagens/posts/celtrix.png" alt="Moderninha Smart">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
-                <a href="#">
-                  <h2>Moderninha Smart é boa? Veja taxas e como funciona a máquina
-                    do PagSeguro</h2>
+              <p class="texto-p-header">Tudo em um</p>
+                <a href="../pageposts/hardware.post2.html">
+                  <h2>Celtrix funciona como caixa de som, carregador portátil e memória externa</h2>
                 </a>
               <p class="texto-p-main">
-                Nova máquina de cartão do PagSeguro traz tecnologias de
-                gestão e integração com o Android; saiba se ela é uma boa
-                opção para o seu negócio
+                O pequeno gadget multifuncional recebeu financiamento coletivo para ser produzido.
               </p>
               <p class="texto-p-footer">
-                HÁ 10 HORAS - EM MÁQUINAS DE CARTÃO
+                HÁ 10 HORAS - EM HARDWARE
               </p>
             </div>
           </div>
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/videogame.png" alt="Video Game">
+              <a href="../pageposts/hardware.post3.html">
+                <img src="../imagens/posts/beats.jpg" alt="Video Game">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
-                <a href="#">
-                  <h2>Como usar o novo Editor de Avatares do Xbox One</h2>
+              <p class="texto-p-header">Lançamento!</p>
+                <a href="../pageposts/hardware.post3.html">
+                  <h2>Fone Studio3 Wireless ganha coleção Skyline com cores luxuosas</h2>
                 </a>
               <p class="texto-p-main">
-                Criador de personagens foi atualizado com diversos itens e aparências
+                Fones de ouvido contam com sistema inteligente de cancelamento de ruídos que isola choro de bebê no avião
               </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM VIDEO GAME
+                HÁ 11 HORAS - EM FONES
+              </p>
+            </div>
+          </div>
+
+          <div class="posts">
+            <div class="imagem">
+              <a href="../pageposts/hardware.post4.html">
+                <img src="../imagens/posts/gHome.png" alt="Video Game">
+              </a>
+            </div>
+            <div class="texto">
+              <p class="texto-p-header">Novo Google Home</p>
+                <a href="../pageposts/hardware.post4.html">
+                  <h2>Google Home Hub é novo smart display voltado para o dia a dia</h2>
+                </a>
+              <p class="texto-p-main">
+                Primeira tela inteligente do Google foi pensada para facilitar o dia a dia das casas e servir de central de controle para dispositivos conectados da casa
+              </p>
+              <p class="texto-p-footer">
+                HÁ 11 HORAS - EM SMART-HOUSE
               </p>
             </div>
           </div>
