paginas de conteudo de smartphones e aplicativos adicionadas

--- a/pages/aplicativos.html
+++ b/pages/aplicativos.html
@@ -44,64 +44,79 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+              <a href="../pageposts/aplicativos.post.html">
+                <img src="../imagens/posts/wapp1.jpg" alt="whatsapp">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">SOLTA O SOM!</p>
-                <a href="#">
-                  <h2>Veja dicas para bateria da caixinha da JBL durar mais</h2>
+              <p class="texto-p-header">novidade no whatsapp</p>
+                <a href="../pageposts/aplicativos.post.html">
+                  <h2>O Whatsapp está testando um recurso para adicionar contatos via código QR</h2>
                 </a>
               <p class="texto-p-main">
-                Orientações também indicam métodos para o carregamento
-                ser mais rápido e eficiente
+                De acordo com a WABetaInfo, o Whatsapp está testando uma nova função que vai facilitar bastante adicionar novos contatos à lista atual.
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM CAIXAS DE SOM
+                ONTEM - EM WHATSAPP
               </p>
             </div>
           </div>
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
+              <a href="../pageposts/aplicativos.post2.html">
+                <img src="../imagens/posts/wappVStelg1.jpg" alt="Moderninha Smart">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
-                <a href="#">
-                  <h2>Moderninha Smart é boa? Veja taxas e como funciona a máquina
-                    do PagSeguro</h2>
+              <p class="texto-p-header">telegram vs whatsapp</p>
+                <a href="../pageposts/aplicativos.post2.html">
+                  <h2>Em jogada estratégica, Telegram lança 20 pacotes de adesivos para WhatsApp</h2>
                 </a>
               <p class="texto-p-main">
-                Nova máquina de cartão do PagSeguro traz tecnologias de
-                gestão e integração com o Android; saiba se ela é uma boa
-                opção para o seu negócio
+                O mais recente lançamento do Telegram: 20 pacotes de adesivos para incrementar a biblioteca do rival WhatsApp.
               </p>
               <p class="texto-p-footer">
-                HÁ 10 HORAS - EM MÁQUINAS DE CARTÃO
+                HÁ 10 HORAS - EM TELEGRAM
               </p>
             </div>
           </div>
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/videogame.png" alt="Video Game">
+              <a href="../pageposts/aplicativos.post3.html">
+                <img src="../imagens/posts/maps1.jpg" alt="Google maps">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
-                <a href="#">
-                  <h2>Como usar o novo Editor de Avatares do Xbox One</h2>
+              <p class="texto-p-header">novidade</p>
+                <a href="../pageposts/aplicativos.post3.html">
+                  <h2>Google permite que usuário 'siga' seus lugares favoritos pelo Google Maps</h2>
                 </a>
               <p class="texto-p-main">
-                Criador de personagens foi atualizado com diversos itens e aparências
+                O Google Maps vai estrear uma novidade na maneira em que mantemos contato com locais onde gostamos de ir, como restaurantes, casas de show e outros comércios.              </p>
+              <p class="texto-p-footer">
+                HÁ 11 HORAS - EM GOOGLE
+              </p>
+            </div>
+          </div>
+
+          <div class="posts">
+            <div class="imagem">
+              <a href="../pageposts/aplicativos.post4.html">
+                <img src="../imagens/posts/likewise.png" alt="Google maps">
+              </a>
+            </div>
+            <div class="texto">
+              <p class="texto-p-header">lançamento</p>
+                <a href="../pageposts/aplicativos.post4.html">
+                  <h2>App financiado por Bill Gates permite fazer recomendações para amigos</h2>
+                </a>
+              <p class="texto-p-main">
+                Likewise, um aplicativo que reúne recomendações de pessoas que você conhece e/ou nas quais confia.
               </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM VIDEO GAME
+                HÁ 11 HORAS - EM LANÇAMENTOS
               </p>
             </div>
           </div>
