--- a/pages/smartphone.html
+++ b/pages/smartphone.html
@@ -44,67 +44,84 @@
         <div class="main-div">
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/caixadesom.jpg" alt="Caixa de Som">
+              <a href="../pageposts/smartphone.post.html">
+                <img src="../imagens/posts/flip1.jpg" alt="Caixa de Som">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header">SOLTA O SOM!</p>
-                <a href="#">
-                  <h2>Veja dicas para bateria da caixinha da JBL durar mais</h2>
+              <p class="texto-p-header">lançamento!</p>
+                <a href="../pageposts/smartphone.post.html">
+                  <h2>Samsung lança na China nova versão do smartphone com flip W2019</h2>
                 </a>
               <p class="texto-p-main">
-                Orientações também indicam métodos para o carregamento
-                ser mais rápido e eficiente
+                O smartphone vem com duas telas, uma na parte de dentro e outra na parte de fora da tampa.
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM CAIXAS DE SOM
+                ONTEM - EM SAMSUNG
               </p>
             </div>
           </div>
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/moderninha-smart.jpg" alt="Moderninha Smart">
+              <a href="../pageposts/smartphone.post2.html">
+                <img src="../imagens/posts/j4-1.jpg" alt="Moderninha Smart">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
-                <a href="#">
-                  <h2>Moderninha Smart é boa? Veja taxas e como funciona a máquina
-                    do PagSeguro</h2>
+              <p class="texto-p-header">novo modelo</p>
+                <a href="../pageposts/smartphone.post2.html">
+                  <h2>Samsung revela seu novo smartphone Galaxy J4 Core</h2>
                 </a>
               <p class="texto-p-main">
-                Nova máquina de cartão do PagSeguro traz tecnologias de
-                gestão e integração com o Android; saiba se ela é uma boa
-                opção para o seu negócio
+                O smartphone vem com o sistema operacional Android 8.1 Oreo Go Edition.
               </p>
               <p class="texto-p-footer">
-                HÁ 10 HORAS - EM MÁQUINAS DE CARTÃO
+                HÁ 10 HORAS - EM SAMSUNG
               </p>
             </div>
           </div>
 
           <div class="posts">
             <div class="imagem">
-              <a href="#">
-                <img src="../imagens/posts/videogame.png" alt="Video Game">
+              <a href="../pageposts/smartphone.post3.html">
+                <img src="../imagens/posts/honor1.webp" alt="Video Game">
               </a>
             </div>
             <div class="texto">
-              <p class="texto-p-header"></p>
-                <a href="#">
-                  <h2>Como usar o novo Editor de Avatares do Xbox One</h2>
+              <p class="texto-p-header">novo modelo huawei</p>
+                <a href="../pageposts/smartphone.post3.html">
+                  <h2>Honor anuncia seu novo smartphone Magic 2</h2>
                 </a>
               <p class="texto-p-main">
-                Criador de personagens foi atualizado com diversos itens e aparências
+                O dispositivo vem com câmeras embutidas em um painel retrátil.
               </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM VIDEO GAME
+                HÁ 11 HORAS - EM HUAWEI
               </p>
             </div>
           </div>
+
+          <div class="posts">
+            <div class="imagem">
+              <a href="../pageposts/smartphone.post4.html">
+                <img src="../imagens/posts/nubia1.png" alt="Video Game">
+              </a>
+            </div>
+            <div class="texto">
+              <p class="texto-p-header">novo modelo zte</p>
+                <a href="../pageposts/smartphone.post4.html">
+                  <h2>Novo smartphone Nubia X traz segunda tela na parte traseira</h2>
+                </a>
+              <p class="texto-p-main">
+                O dispositivo tem um leitor de impressão digital em cada lateral, cada um para ativar um lado da tela.
+              </p>
+              <p class="texto-p-footer">
+                HÁ 11 HORAS - EM ZTE
+              </p>
+            </div>
+          </div>
+
 
         </div>
         <aside class="main-aside">
