Detalhes no README.md#v0.6

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   </head>
   <body>
     <!-- BOTAO PARA MOVER PARA CIMA -->
-    <div id="moveUpIcon" class="moveUpIcon">
-      <div class="moveUpIconCircle" title="Ir para o topo">
+    <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
         <i class="fas fa-arrow-up fa-2x"></i>
-      </div>
     </div>
 
     <header class="header">
