Changelog README.md#v0.7

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div>
         <div class="header-title">
           <h1><a href="./index.html">TecBlog</a></h1>
+          <p>Seu jornal digital sobre o mundo tecnológico</p>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
